# cmake_vcpkg_example

./: CMakeLists.txt  README.md  vcpkg.json
src/: main.cxx
